# DAIS-wp1.3

./: .gitignore  .travis.yml  README.md  pom.xml
C++/app-i3dlibs/: CMakeLists.txt
C++/app-i3dlibs/src/: recvAndSave.cpp
C++/core/: CMakeLists.txt
C++/core/src/: ImgParams.h  ReceiveOneImage.cpp  ReceiveOneImage.h  SendImage.cpp  SendImage.h  TransferImage.cpp  TransferImage.h  TransferImage_Utils.h  testLibCalls.cpp
KNIME/: .classpath  .project  build.properties  plugin.xml
KNIME/src/de/mpicbg/ulman/nodeNetImgSink/: WriterNodeDialog.java  WriterNodeFactory.java  WriterNodeFactory.xml  WriterNodeModel.java  WriterNodePlugin.java  WriterNodeView.java
KNIME/src/de/mpicbg/ulman/nodeNetImgSource/: ReaderNodeDialog.java  ReaderNodeFactory.java  ReaderNodeFactory.xml  ReaderNodeModel.java  ReaderNodePlugin.java  ReaderNodeView.java
release/: README.md  howToInstall.txt
release/doc/: presentation.latex  presentationMULTI.latex
scijava/: .travis.yml  pom.xml
scijava/.travis/: build.sh
scijava/src/main/java/de/mpicbg/ulman/: ArraySender.java  FijiLogger.java  LocalNetReceiver.java  LocalNetSender.java  ReceiveImage.java  ReceiveImages.java  RequestImage.java  SendImage.java  SendImages.java  ServeImage.java
scijava/src/main/java/de/mpicbg/ulman/imgtransfer/: ArrayPacker.java  ArrayReceiver.java  ArraySender.java  ImgPacker.java  ImgStreamer.java  ImgTransfer.java  ProgressCallback.java  testStreams.java
scijava/src/main/java/de/mpicbg/ulman/imgtransfer/buffers/: Buffer.java  ByteBuffer.java  ByteSender.java  DoubleBuffer.java  DoubleSender.java  FloatBuffer.java  FloatSender.java  Sender.java  ShortBuffer.java  ShortSender.java
scijava/src/main/java/de/mpicbg/ulman/imgtransfer/sockets/: RecvFromInputStream.java  RecvFromSocket.java  RecvSocket.java  SendSocket.java  SendToOutputStream.java  SendToSocket.java  Socket.java
scijava/src/test/java/de/mpicbg/ulman/: OpenFiji.java  TestPacker.java
src/main/java/de/mpicbg/ulman/: ArrayReceiver.java  ArraySender.java  ImgPacker.java  LocalNetReceiver.java  LocalNetSender.java  PackAndSendHelper.java  ReceiveAndUnpackHelper.java  localNetReceiver.java  localNetSender.java
src/test/java/de/mpicbg/ulman/: ArraySenderAndReceiverTest.java  OpenFiji.java  TestPacker.java  openFiji.java  testPacker.java
